# zann

./: .dockerignore  .env.example  .env.highload.example  .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  ROADMAP.md  compose.e2e.yaml  compose.loadtest.example.yaml  compose.test.yaml  compose.yaml  deny.toml  flake.nix  shell.nix
apps/desktop/src-tauri/: Cargo.toml  Entitlements.dev.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: constants.rs  crypto.rs  main.rs  state.rs  types.rs  util.rs
apps/desktop/src-tauri/src/commands/: auth.rs  backup.rs  items.rs  items_history.rs  mod.rs  session.rs  shell.rs  storage.rs  sync.rs  totp.rs  types.rs  vaults.rs
apps/desktop/src-tauri/src/infra/: auth.rs  config.rs  http.rs  identity.rs  mod.rs  remote.rs
apps/desktop/src-tauri/src/services/: auth.rs  auth_oidc.rs  auth_password.rs  backup.rs  items.rs  items_history.rs  mod.rs  session.rs  storage.rs  sync.rs  sync_helpers.rs  totp.rs  types.rs  vaults.rs
apps/kde/: .qmlls.ini  Cargo.toml  README.md  build.rs  package.json
apps/kde/mock-server/: Cargo.toml
apps/kde/mock-server/src/: main.rs
apps/kde/qml/: main.qml
apps/kde/qml/components/: PasswordSetup.qml  ServerConnect.qml  WelcomePage.qml
apps/kde/scripts/e2e/: run.mjs
apps/kde/src/: clipboard.h  cxxqt.rs  main.rs  qml_register.cpp  qml_test_runner.cpp  qml_test_runner.rs  qt_logging.cpp
apps/kde/tests/qml/: tst_master_password.qml  tst_remote_flow.qml
apps/kde/tests/qml-e2e/: tst_remote_relogin_e2e.qml
apps/kde/tests/qml-mock/: tst_remote_relogin_mock.qml
crates/zann-cli/: Cargo.toml
crates/zann-cli/src/: cli_args.rs  cli_command.rs  main.rs  security_profiles.rs  tests.rs
crates/zann-cli/src/modules/: mod.rs
crates/zann-cli/src/modules/auth/: actions.rs  args.rs  http.rs  mod.rs  types.rs
crates/zann-cli/src/modules/devices/: actions.rs  args.rs  http.rs  mod.rs
crates/zann-cli/src/modules/groups/: actions.rs  args.rs  http.rs  mod.rs  types.rs
crates/zann-cli/src/modules/items/: actions.rs  args.rs  http.rs  mod.rs  types.rs
crates/zann-cli/src/modules/shared/: actions.rs  args.rs  fetch.rs  format.rs  format_table.rs  http.rs  mod.rs  render.rs  render_fs.rs  resolve.rs  rotate.rs  types.rs  utils.rs
crates/zann-cli/src/modules/system/: actions.rs  args.rs  config.rs  http.rs  mod.rs  types.rs
crates/zann-cli/src/modules/users/: actions.rs  args.rs  http.rs  mod.rs  types.rs
crates/zann-cli/src/modules/vaults/: actions.rs  args.rs  http.rs  mod.rs  types.rs
crates/zann-cli/tests/: cli_commands.rs  cli_generate.rs  cli_insecure.rs  cli_types.rs  e2e.rs
crates/zann-client/: Cargo.toml
crates/zann-client/src/: auth.rs  auth_oidc.rs  auth_password.rs  config.rs  constants.rs  crypto.rs  identity.rs  lib.rs  remote.rs  state.rs  sync.rs  sync_helpers.rs  tokens.rs  types.rs  util.rs
crates/zann-client/tests/: config.rs
crates/zann-core/: Cargo.toml
crates/zann-core/src/: auth.rs  constants.rs  crypto.rs  lib.rs  secrets.rs  security_profile.rs  services.rs  vault_crypto.rs
crates/zann-core/src/api/: auth.rs  mod.rs  vaults.rs
crates/zann-core/src/models/: enums.rs  from_row.rs  mod.rs  structs.rs  tests.rs
crates/zann-core/tests/: prop_crypto.rs  prop_roundtrip.rs
crates/zann-crypto/: Cargo.toml
crates/zann-crypto/src/: crypto.rs  lib.rs  passwords.rs  secrets.rs  tokens.rs  vault_crypto.rs
crates/zann-crypto/tests/: prop_crypto.rs  prop_roundtrip.rs
crates/zann-db/: Cargo.toml
crates/zann-db/migrations/: 0001_init.sql  0002_item_history.sql
crates/zann-db/src/: lib.rs
crates/zann-db/src/local/: enums.rs  item_history_repo.rs  item_repo.rs  metadata_repo.rs  mod.rs  models.rs  pending_change_repo.rs  storage_repo.rs  sync_cursor_repo.rs  vault_repo.rs
crates/zann-db/src/repo/: changes.rs  devices.rs  groups.rs  items.rs  mod.rs  sessions.rs  users.rs  vaults.rs
crates/zann-db/src/services/: app.rs  items.rs  mod.rs  storages.rs  vaults.rs
crates/zann-db/tests/: local_history.rs  repo.rs
crates/zann-ffi/: Cargo.toml
crates/zann-ffi/src/: lib.rs
crates/zann-ffi/tests/: master_password.rs  remote_master_password.rs
crates/zann-server/: Cargo.toml  Dockerfile  README.md  SECURITY.md
crates/zann-server/migrations/: 0001_init.sql  0002_add_attachment_enc_mode.sql  0003_add_attachments_deleted_at.sql
crates/zann-server/src/: app.rs  bootstrap.rs  config.rs  lib.rs  main.rs  runtime.rs
crates/zann-server/src/cli/: export.rs  init.rs  mod.rs  provision.rs
crates/zann-server/src/cli/tokens/: create.rs  list.rs  mod.rs  models.rs  revoke.rs  rotate.rs
crates/zann-server/src/domains/: errors.rs  mod.rs
crates/zann-server/src/domains/access_control/: http.rs  http_admin.rs  mod.rs  policies.rs  policy_store.rs
crates/zann-server/src/domains/auth/: helpers.rs  mod.rs  service.rs
crates/zann-server/src/domains/items/: service.rs
crates/zann-server/src/domains/secrets/: mod.rs  policies.rs  service.rs
crates/zann-server/src/domains/sync/: service.rs
crates/zann-server/src/domains/users/: admin_service.rs  mod.rs  service.rs
crates/zann-server/src/http/: mod.rs  openapi.rs
crates/zann-server/src/infra/: audit.rs  db.rs  history.rs  metrics.rs  mod.rs  request_context.rs  security_profiles.rs  usage.rs  user_display.rs
crates/zann-server/src/settings/: env_config.rs  mod.rs  tests.rs
crates/zann-server/tests/: attachments_endpoints.rs  auth_endpoints.rs  client_workflow_cache.rs  client_workflow_personal.rs  client_workflow_shared.rs  devices_groups_endpoints.rs  health_components.rs  identity_spec.rs  item_history.rs  items_encryption.rs  metrics_export.rs  oidc_config.rs  oidc_identity.rs  secrets_endpoints.rs  security_rbac.rs  shared_plaintext.rs  support.rs  sync_concurrency.rs  system_rotation_endpoints.rs  users_endpoints.rs  validation_session.rs  vaults_preflight.rs
crates/zann-server/tests/client_workflow_support/: app.rs  client.rs  crypto.rs  mod.rs  sync_helpers.rs
(+280 files in other folders)
