[package]
name = "zann"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "zann"
path = "src/main.rs"

[[bin]]
name = "zann-qml-tests"
path = "src/qml_test_runner.rs"

[dependencies]
cxx = "1"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_gui", "qt_qml"] }
zann-ffi = { path = "../../crates/zann-ffi" }
zann-client = { path = "../../crates/zann-client" }
zann-db = { path = "../../crates/zann-db", features = ["sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zann-core = { path = "../../crates/zann-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
totp-rs = "5"
data-encoding = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
dirs = "5"

[build-dependencies]
cxx-qt-build = "0.8"
cc = "1"
qt-build-utils = { version = "0.8", features = ["qmake"] }
