[package]
name = "zann-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "zann"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
rand = "0.8.5"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
zann-core = { path = "../zann-core", default-features = false }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
blake3 = "1"
urlencoding = "2.1.3"
arboard = "3.4.0"
keyring = "2.3.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.2"
tempfile = "3.10.1"
mockito = "1.4.0"
