[package]
name = "zann-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
rand = "0.8"
serde_yaml = "0.9"
async-trait = "0.1"
blake3 = "1"
tracing = "0.1"
sqlx-core = { version = "0.8", default-features = false, features = ["chrono", "json", "uuid"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["chrono", "json", "uuid"], optional = true }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["bundled", "chrono", "json", "uuid"], optional = true }
uuid = { version = "1", features = ["v7", "serde"] }
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
proptest = "1.5.0"

[features]
default = []
postgres = ["dep:sqlx-postgres"]
sqlite = ["dep:sqlx-sqlite"]
