[package]
name = "zann-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx-core = { version = "0.8", default-features = false, features = ["chrono", "json", "uuid"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["chrono", "json", "uuid"], optional = true }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["bundled", "chrono", "json", "uuid"], optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
zann-crypto = { path = "../zann-crypto" }

[features]
default = []
postgres = ["dep:sqlx-postgres"]
sqlite = ["dep:sqlx-sqlite"]
