[package]
name = "zann-ffi"
version = "0.1.0"
edition = "2021"
publish = false
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uniffi = "0.28"
uuid = { version = "1", features = ["v7"] }
zann-core = { path = "../zann-core", features = ["sqlite"] }
zann-crypto = { path = "../zann-crypto" }
zann-db = { path = "../zann-db", features = ["sqlite"] }
zann-client = { path = "../zann-client" }

[dev-dependencies]
tempfile = "3"
