[package]
name = "zann-desktop"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
data-encoding = "2.6"
keyring = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = "2.1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-biometry = "0.2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
sys-locale = "0.3"
dirs = "5"
uuid = { version = "1", features = ["v7", "serde"] }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "stream", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"

zann-core = { path = "../../../crates/zann-core", default-features = false, features = ["sqlite"] }
zann-db = { path = "../../../crates/zann-db", default-features = false, features = ["sqlite"] }
zann-keystore = { path = "../../../crates/zann-keystore" }
